# Copyright © 2011 Richard Kettlewell.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
SUBDIRS=src tests doc tools
EXTRA_DIST=scripts/txt2src scripts/htmlman scripts/dist \
	debian/changelog debian/control debian/copyright \
	debian/doc.rsbackup \
	debian/rsbackup.conffiles debian/rsbackup.postinst debian/rules

echo-distdir:
	@echo $(distdir)
echo-version:
	@echo $(VERSION)
